# sovryn-contracts

./: .gitignore  README.md  brownie-config.yaml  generate-mnemonic.py  pyproject.toml  update-contracts.sh
tests/: __init__.py
tests/tokens/: sov.py
